tests/ui/consts/missing_span_in_backtrace.stderr
error[E0080]: evaluation of constant value failed
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
   |
   = note: unable to copy parts of a pointer from memory at ALLOC0
   |
note: inside `std::ptr::read::<MaybeUninit<MaybeUninit<u8>>>`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `std::ptr::swap_nonoverlapping_simple_untyped::<MaybeUninit<u8>>`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `swap_nonoverlapping::<MaybeUninit<u8>>`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `X`
  --> $DIR/missing_span_in_backtrace.rs:16:9
   |
16 | /         ptr::swap_nonoverlapping(
17 | |             &mut ptr1 as *mut _ as *mut MaybeUninit<u8>,
18 | |             &mut ptr2 as *mut _ as *mut MaybeUninit<u8>,
19 | |             mem::size_of::<&i32>(),
20 | |         );
   | |_________^
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
